--- a/index.html
+++ b/index.html
@@ -354,41 +354,41 @@
         </tr>
         <tr>
             <th rowspan="12">14</th>
-            <td><a href="/actividad_06/Ejercicio14-1.html">Actividad 1</a></td>
-            <td rowspan="12"><a href="/actividad_06/Personalizado5.html">Personalizado</a></td>
+            <td><a href="./actividad_06/Ejercicio14-1.html">Actividad 1</a></td>
+            <td rowspan="12"><a href="./actividad_06/Personalizado5.html">Personalizado</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-2.html">Actividad 2</a></td>
+            <td><a href="./actividad_06/Ejercicio14-2.html">Actividad 2</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-3.html">Actividad 3</a></td>
+            <td><a href="./actividad_06/Ejercicio14-3.html">Actividad 3</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-4.html">Actividad 4</a></td>
+            <td><a href="./actividad_06/Ejercicio14-4.html">Actividad 4</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-5.html">Actividad 5</a></td>
+            <td><a href="./actividad_06/Ejercicio14-5.html">Actividad 5</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-6.html">Actividad 6</a></td>
+            <td><a href="./actividad_06/Ejercicio14-6.html">Actividad 6</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-7.html">Actividad 7</a></td>
+            <td><a href="./actividad_06/Ejercicio14-7.html">Actividad 7</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-8.html">Actividad 8</a></td>
+            <td><a href="./actividad_06/Ejercicio14-8.html">Actividad 8</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-9.html">Actividad 9</a></td>
+            <td><a href="./actividad_06/Ejercicio14-9.html">Actividad 9</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-10.html">Actividad 10</a></td>
+            <td><a href="./actividad_06/Ejercicio14-10.html">Actividad 10</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-11.html">Actividad 11</a></td>
+            <td><a href="./actividad_06/Ejercicio14-11.html">Actividad 11</a></td>
         </tr>
         <tr>
-            <td><a href="/actividad_06/Ejercicio14-12.html">Actividad 12</a></td>
+            <td><a href="./actividad_06/Ejercicio14-12.html">Actividad 12</a></td>
         </tr>
     </tr>
  
